[gd_scene load_steps=8 format=3 uid="uid://ffehrbd27s8d"]

[ext_resource type="TileSet" uid="uid://vy7wx3h42jmo" path="res://Scenes/background tileset.tres" id="1_30vsc"]
[ext_resource type="Script" path="res://Scenes/Main floor rooms/Stairs/stairs.gd" id="1_qh87w"]
[ext_resource type="TileSet" uid="uid://clwqjap3ihiu" path="res://Scenes/collision tileset.tres" id="2_c5c5u"]
[ext_resource type="PackedScene" uid="uid://d3smthgcyvtgq" path="res://Scenes/player.tscn" id="2_p6e2w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_omm81"]
size = Vector2(24, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_exbm7"]
size = Vector2(23.9844, 5.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ab7vd"]
size = Vector2(73.5391, 39.598)

[node name="Stairs" type="Node2D"]
script = ExtResource("1_qh87w")

[node name="Collision" type="TileMap" parent="."]
tile_set = ExtResource("2_c5c5u")
format = 2
layer_0/tile_data = PackedInt32Array(851969, 1048577, 0, 851970, 1048577, 0, 851971, 1048577, 0, 851972, 1048577, 0, 851973, 1048577, 0, 917509, 1048577, 0, 917510, 1048577, 0, 917511, 1048577, 0, 917512, 1048577, 0, 917513, 1048577, 0, 851977, 1048577, 0, 851978, 1048577, 0, 851979, 1048577, 0, 851980, 1048577, 0, 851981, 1048577, 0, 917518, 1048577, 0, 917517, 1048577, 0, 983054, 1048577, 0, 983055, 1048577, 0, 1048591, 1048577, 0, 1048592, 1048577, 0, 1114128, 1048577, 0, 1114129, 1048577, 0, 1179665, 1048577, 0, 1179666, 1048577, 0, 1245202, 1048577, 0, 1245203, 1048577, 0, 1310739, 1048577, 0, 1310740, 1048577, 0, 1310741, 1048577, 0, 1310742, 1048577, 0, 1310743, 1048577, 0, 1310744, 1048577, 0, 1310745, 1048577, 0, 1310746, 1048577, 0, 1310747, 1048577, 0, 1310748, 1048577, 0, 1376284, 1048577, 0, 1376285, 1048577, 0, 1376286, 1048577, 0, 1376287, 1048577, 0, 1376288, 1048577, 0, 1310752, 1048577, 0, 1310753, 1048577, 0, 1310754, 1048577, 0, 1310755, 1048577, 0, 1310756, 1048577, 0, 1310757, 1048577, 0, 1245221, 1048577, 0, 1179685, 1048577, 0, 786432, 1048577, 0, 720896, 1048577, 0, 786433, 524289, 0, 720898, 524289, 0, 655363, 524289, 0, 589828, 1048577, 0, 589829, 1048577, 0, 589830, 1048577, 0, 589831, 1048577, 0, 589832, 1048577, 0, 589833, 1048577, 0, 589834, 1048577, 0, 589835, 1048577, 0, 589836, 1048577, 0, 589837, 1048577, 0, 589838, 1048577, 0, 589839, 1048577, 0, 589840, 1048577, 0, 655377, 1048577, 0, 720914, 1048577, 0, 786451, 1048577, 0, 851988, 1048577, 0, 917525, 1048577, 0, 983062, 1048577, 0, 1048599, 1048577, 0, 1048600, 1048577, 0, 1048601, 1048577, 0, 1048602, 1048577, 0, 1048603, 1048577, 0, 1048604, 1048577, 0, 1048605, 1048577, 0, 1048606, 1048577, 0, 1048607, 1048577, 0, 1048608, 1048577, 0, 1048609, 1048577, 0, 1114146, 262145, 0, 1179683, 262145, 0, 1245220, 262145, 0, 1179684, 1048577, 0, 1114147, 1048577, 0, 1048610, 1048577, 0, 720897, 1048577, 0, 655362, 1048577, 0, 589827, 1048577, 0, 589841, 1048577, 0, 655378, 1048577, 0, 720915, 1048577, 0, 786452, 1048577, 0, 851989, 1048577, 0, 917526, 1048577, 0, 983063, 1048577, 0, 1048611, 1048577, 0, 1114148, 1048577, 0)

[node name="background" type="TileMap" parent="."]
tile_set = ExtResource("1_30vsc")
format = 2
layer_0/name = "background flat"
layer_0/tile_data = PackedInt32Array(0, 1048576, 0, 65536, 1048576, 0, 131072, 1048576, 0, 196608, 1048576, 0, 262144, 1048576, 0, 327680, 1048576, 0, 393216, 1048576, 0, 458752, 1048576, 0, 524288, 1048576, 0, 589824, 1048576, 0, 655360, 1048576, 0, 720896, 1048576, 0, 786432, 1048576, 0, 851968, 1048576, 0, 917504, 1048576, 0, 983040, 1048576, 0, 1048576, 1048576, 0, 1114112, 1048576, 0, 1179648, 1048576, 0, 1245184, 1048576, 0, 1310720, 1048576, 0, 1310721, 1048576, 0, 1310722, 1048576, 0, 1310723, 1048576, 0, 1310724, 1048576, 0, 1310725, 1048576, 0, 1310726, 1048576, 0, 1310756, 1048576, 0, 1310757, 1048576, 0, 1179685, 1048576, 0, 1114149, 1048576, 0, 1048613, 1048576, 0, 983077, 1048576, 0, 917541, 1048576, 0, 852005, 1048576, 0, 786469, 1048576, 0, 720933, 1048576, 0, 655397, 1048576, 0, 589861, 1048576, 0, 524325, 1048576, 0, 458789, 1048576, 0, 393253, 1048576, 0, 327717, 1048576, 0, 262181, 1048576, 0, 196645, 1048576, 0, 131109, 1048576, 0, 65573, 1048576, 0, 37, 1048576, 0, 36, 1048576, 0, 35, 1048576, 0, 34, 1048576, 0, 33, 1048576, 0, 32, 1048576, 0, 31, 1048576, 0, 30, 1048576, 0, 29, 1048576, 0, 28, 1048576, 0, 27, 1048576, 0, 26, 1048576, 0, 25, 1048576, 0, 24, 1048576, 0, 23, 1048576, 0, 22, 1048576, 0, 21, 1048576, 0, 20, 1048576, 0, 19, 1048576, 0, 18, 1048576, 0, 17, 1048576, 0, 16, 1048576, 0, 15, 1048576, 0, 14, 1048576, 0, 13, 1048576, 0, 12, 1048576, 0, 11, 1048576, 0, 10, 1048576, 0, 9, 1048576, 0, 8, 1048576, 0, 7, 1048576, 0, 6, 1048576, 0, 5, 1048576, 0, 4, 1048576, 0, 3, 1048576, 0, 2, 1048576, 0, 1, 1048576, 0, -1, 1048576, 0, -65536, 1048576, 0, -65535, 1048576, 0, -65534, 1048576, 0, -65533, 1048576, 0, -65532, 1048576, 0, -65531, 1048576, 0, -65530, 1048576, 0, -65529, 1048576, 0, -65528, 1048576, 0, -65527, 1048576, 0, -65526, 1048576, 0, -65525, 1048576, 0, -65524, 1048576, 0, -65523, 1048576, 0, -65522, 1048576, 0, -65521, 1048576, 0, -65520, 1048576, 0, -65519, 1048576, 0, -65518, 1048576, 0, -65517, 1048576, 0, -65516, 1048576, 0, -65515, 1048576, 0, -65514, 1048576, 0, -65513, 1048576, 0, -65512, 1048576, 0, -65511, 1048576, 0, -65510, 1048576, 0, -65509, 1048576, 0, -65508, 1048576, 0, -65507, 1048576, 0, -65506, 1048576, 0, -65505, 1048576, 0, -65504, 1048576, 0, -65503, 1048576, 0, -65502, 1048576, 0, -65501, 1048576, 0, -65500, 1048576, 0, -65499, 1048576, 0, -65498, 1048576, 0, 38, 1048576, 0, 65574, 1048576, 0, 131110, 1048576, 0, 196646, 1048576, 0, 262182, 1048576, 0, 327718, 1048576, 0, 393254, 1048576, 0, 458790, 1048576, 0, 524326, 1048576, 0, 589862, 1048576, 0, 655398, 1048576, 0, 720934, 1048576, 0, 786470, 1048576, 0, 852006, 1048576, 0, 917542, 1048576, 0, 983078, 1048576, 0, 1048614, 1048576, 0, 1114150, 1048576, 0, 1179686, 1048576, 0, 1245222, 1048576, 0, 1310758, 1048576, 0, 1376294, 1048576, 0, 1376293, 1048576, 0, 1376292, 1048576, 0, 1376291, 1048576, 0, 1376290, 1048576, 0, 1376289, 1048576, 0, 1376288, 1048576, 0, 1376287, 1048576, 0, 1376286, 1048576, 0, 1376285, 1048576, 0, 1376284, 1048576, 0, 1376283, 1048576, 0, 1376282, 1048576, 0, 1376281, 1048576, 0, 1376280, 1048576, 0, 1376279, 1048576, 0, 1376278, 1048576, 0, 1376277, 1048576, 0, 1376276, 1048576, 0, 1376275, 1048576, 0, 1376274, 1048576, 0, 1376273, 1048576, 0, 1376272, 1048576, 0, 1376271, 1048576, 0, 1376270, 1048576, 0, 1376269, 1048576, 0, 1376268, 1048576, 0, 1376267, 1048576, 0, 1376266, 1048576, 0, 1376265, 1048576, 0, 1376264, 1048576, 0, 1376263, 1048576, 0, 1376262, 1048576, 0, 1376261, 1048576, 0, 1376260, 1048576, 0, 1376259, 1048576, 0, 1376258, 1048576, 0, 1376257, 1048576, 0, 1376256, 1048576, 0, 1441791, 1048576, 0, 1376255, 1048576, 0, 1310719, 1048576, 0, 1245183, 1048576, 0, 1179647, 1048576, 0, 1114111, 1048576, 0, 1048575, 1048576, 0, 983039, 1048576, 0, 917503, 1048576, 0, 851967, 1048576, 0, 786431, 1048576, 0, 720895, 1048576, 0, 655359, 1048576, 0, 589823, 1048576, 0, 524287, 1048576, 0, 458751, 1048576, 0, 393215, 1048576, 0, 327679, 1048576, 0, 262143, 1048576, 0, 196607, 1048576, 0, 131071, 1048576, 0, 65535, 1048576, 0, 131080, 1048576, 0, 65544, 1048576, 0, 65543, 1048576, 0, 65542, 1048576, 0, 65541, 1048576, 0, 65540, 1048576, 0, 65539, 1048576, 0, 65538, 1048576, 0, 851969, 1048576, 0, 917505, 1048576, 0, 983041, 1048576, 0, 1048577, 1048576, 0, 1114113, 1048576, 0, 1179649, 1048576, 0, 1245186, 1048576, 0, 1114114, 1048576, 0, 1048578, 1048576, 0, 983042, 1048576, 0, 917506, 1048576, 0, 851970, 1048576, 0, 131075, 1048576, 0, 851971, 1048576, 0, 917507, 1048576, 0, 983043, 1048576, 0, 1048579, 1048576, 0, 1179651, 1048576, 0, 1245187, 1048576, 0, 1245188, 1048576, 0, 1179652, 1048576, 0, 1114116, 1048576, 0, 983044, 1048576, 0, 917508, 1048576, 0, 131076, 1048576, 0, 131077, 1048576, 0, 917509, 1048576, 0, 983045, 1048576, 0, 1048581, 1048576, 0, 1114117, 1048576, 0, 1179653, 1048576, 0, 1245189, 1048576, 0, 1245190, 1048576, 0, 1179654, 1048576, 0, 1114118, 1048576, 0, 1048582, 1048576, 0, 983046, 1048576, 0, 917510, 1048576, 0, 131078, 1048576, 0, 131079, 1048576, 0, 131081, 1048576, 0, 65545, 1048576, 0, 65546, 1048576, 0, 131082, 1048576, 0, 131083, 1048576, 0, 65547, 1048576, 0, 65548, 1048576, 0, 131084, 1048576, 0, 131085, 1048576, 0, 65549, 1048576, 0, 65550, 1048576, 0, 131086, 1048576, 0, 131087, 1048576, 0, 65551, 1048576, 0, 65552, 1048576, 0, 131088, 1048576, 0, 131089, 1048576, 0, 65553, 1048576, 0, 65554, 1048576, 0, 131090, 1048576, 0, 131091, 1048576, 0, 65555, 1048576, 0, 65556, 1048576, 0, 131092, 1048576, 0, 131093, 1048576, 0, 65557, 1048576, 0, 65558, 1048576, 0, 131094, 1048576, 0, 131095, 1048576, 0, 65559, 1048576, 0, 65560, 1048576, 0, 131096, 1048576, 0, 131097, 1048576, 0, 65561, 1048576, 0, 65562, 1048576, 0, 131098, 1048576, 0, 131099, 1048576, 0, 65563, 1048576, 0, 65564, 1048576, 0, 131100, 1048576, 0, 131101, 1048576, 0, 65565, 1048576, 0, 65566, 1048576, 0, 131102, 1048576, 0, 131103, 1048576, 0, 65567, 1048576, 0, 65568, 1048576, 0, 131104, 1048576, 0, 131105, 1048576, 0, 65569, 1048576, 0, 65570, 1048576, 0, 131106, 1048576, 0, 65571, 1048576, 0, 1048580, 1048576, 0, 1114115, 1048576, 0, 1179650, 1048576, 0, 1245185, 1048576, 0, 1245221, 1048576, 0, 851983, 1245184, 0, 917520, 1245184, 0, 1310742, 1048576, 0, 1048586, 1048576, 0, 983050, 1048576, 0, 917514, 1048576, 0, 851978, 1048576, 0, 851975, 1245184, 0, 917511, 1048576, 0, 983047, 1048576, 0, 1048583, 1048576, 0, 1114119, 1048576, 0, 1179655, 1048576, 0, 1245191, 1048576, 0, 1310727, 1048576, 0, 1310728, 1048576, 0, 1245192, 1048576, 0, 1179656, 1048576, 0, 1114120, 1048576, 0, 1048584, 1048576, 0, 983048, 1048576, 0, 917512, 1048576, 0, 851976, 1245184, 0, 851977, 1048576, 0, 917513, 1048576, 0, 983049, 1048576, 0, 1048585, 1048576, 0, 1114121, 1048576, 0, 1179657, 1048576, 0, 1245193, 1048576, 0, 1310729, 1048576, 0, 1310730, 1048576, 0, 1245194, 1048576, 0, 1179658, 1048576, 0, 1114122, 1048576, 0, 1114123, 1048576, 0, 1048587, 1048576, 0, 983051, 1048576, 0, 917515, 1048576, 0, 851979, 1048576, 0, 851980, 1048576, 0, 917516, 1048576, 0, 983052, 1048576, 0, 1048588, 1048576, 0, 1114124, 1048576, 0, 1179660, 1048576, 0, 1179659, 1048576, 0, 1245195, 1048576, 0, 1310731, 1048576, 0, 1310732, 1048576, 0, 1245196, 1048576, 0, 1245197, 1048576, 0, 1179661, 1048576, 0, 1114125, 1048576, 0, 1048589, 1048576, 0, 983053, 1048576, 0, 917517, 1048576, 0, 851981, 1048576, 0, 851982, 1245184, 0, 917518, 1048576, 0, 983054, 1048576, 0, 1048590, 1048576, 0, 1114126, 1048576, 0, 1179662, 1048576, 0, 1245198, 1048576, 0, 1310734, 1048576, 0, 1310733, 1048576, 0, 1310735, 1048576, 0, 1245199, 1048576, 0, 1179663, 1048576, 0, 1114127, 1048576, 0, 1048591, 1048576, 0, 983055, 1048576, 0, 917519, 1245184, 0, 1048592, 1048576, 0, 1114128, 1048576, 0, 1179664, 1048576, 0, 1245200, 1048576, 0, 1310736, 1048576, 0, 1310737, 1048576, 0, 1245201, 1048576, 0, 1179665, 1048576, 0, 1114129, 1048576, 0, 1179666, 1048576, 0, 1245202, 1048576, 0, 1310738, 1048576, 0, 1310739, 1048576, 0, 1245203, 1048576, 0, 1310740, 1048576, 0, 1310741, 1048576, 0, 1310743, 1048576, 0, 1310744, 1048576, 0, 1310745, 1048576, 0, 1310746, 1048576, 0, 1310747, 1048576, 0, 1310748, 1048576, 0, 1310752, 1048576, 0, 1310753, 1048576, 0, 1310754, 1048576, 0, 1310755, 1048576, 0, 851984, 1245184, 0, 917521, 1245184, 0, 983058, 1245184, 0, 1048595, 1245184, 0, 1114132, 1245184, 0, 1179669, 1245184, 0, 1245206, 1245184, 0, 851985, 1245184, 0, 917522, 1245184, 0, 983059, 1245184, 0, 1048596, 1245184, 0, 1114133, 1245184, 0, 1179670, 1245184, 0, 1245207, 1245184, 0, 1179671, 1245184, 0, 1245208, 1245184, 0, 1179672, 1245184, 0, 1179673, 1245184, 0, 1179674, 1245184, 0, 1179675, 1245184, 0, 1179676, 1245184, 0, 1179677, 1245184, 0, 1179678, 1245184, 0, 1179679, 1245184, 0, 1179680, 1245184, 0, 1179681, 1245184, 0, 1179682, 1245184, 0, 1245209, 1245184, 0, 1245210, 1245184, 0, 1245211, 1245184, 0, 1245212, 1245184, 0, 1245213, 1245184, 0, 1245214, 1245184, 0, 1245215, 1245184, 0, 1245216, 1245184, 0, 1245217, 1245184, 0, 1245218, 1245184, 0, 1245219, 1245184, 0, 1310749, 1245184, 0, 1310750, 1245184, 0, 1310751, 1245184, 0, 1114136, 1245184, 0, 1114137, 1245184, 0, 1114138, 1245184, 0, 1114139, 1245184, 0, 1114140, 1245184, 0, 1114141, 1245184, 0, 1114142, 1245184, 0, 1114143, 1245184, 0, 1114144, 1245184, 0, 1114145, 1245184, 0, 786434, 1245184, 0, 720899, 1245184, 0, 786435, 1245184, 0, 655364, 1245184, 0, 720900, 1245184, 0, 786436, 1245184, 0, 655365, 1245184, 0, 720901, 1245184, 0, 786437, 1245184, 0, 655366, 1245184, 0, 720902, 1245184, 0, 786438, 1245184, 0, 655367, 1245184, 0, 720903, 1245184, 0, 786439, 1245184, 0, 655368, 1245184, 0, 720904, 1245184, 0, 786440, 1245184, 0, 655369, 1245184, 0, 720905, 1245184, 0, 786441, 1245184, 0, 655370, 1245184, 0, 720906, 1245184, 0, 786442, 1245184, 0, 655371, 1245184, 0, 720907, 1245184, 0, 786443, 1245184, 0, 655372, 1245184, 0, 720908, 1245184, 0, 786444, 1245184, 0, 655373, 1245184, 0, 720909, 1245184, 0, 786445, 1245184, 0, 655374, 1245184, 0, 720910, 1245184, 0, 786446, 1245184, 0, 720911, 1245184, 0, 786447, 1245184, 0, 786448, 1245184, 0, 983056, 1245184, 0, 1048593, 1245184, 0, 1114130, 1245184, 0, 1179667, 1245184, 0, 1245204, 1245184, 0, 1245205, 1245184, 0, 1179668, 1245184, 0, 1114131, 1245184, 0, 1048594, 1245184, 0, 983057, 1245184, 0, 1114134, 1245184, 0, 1114135, 1245184, 0, 655375, 1245184, 0, 720912, 1245184, 0, 786449, 1245184, 0, 851986, 1245184, 0, 917523, 1245184, 0, 983060, 1245184, 0, 1048597, 1245184, 0, 1048598, 1245184, 0, 983061, 1245184, 0, 917524, 1245184, 0, 851987, 1245184, 0, 786450, 1245184, 0, 720913, 1245184, 0, 655376, 1245184, 0, 196612, 1048576, 0, 196613, 1048576, 0, 196614, 1048576, 0, 196615, 1048576, 0, 196616, 1048576, 0, 196617, 1048576, 0, 196618, 1048576, 0, 196619, 1048576, 0, 196620, 1048576, 0, 196621, 1048576, 0, 196622, 1048576, 0, 196623, 1048576, 0, 196624, 1048576, 0, 196625, 1048576, 0, 196626, 1048576, 0, 196627, 1048576, 0, 196628, 1048576, 0, 196629, 1048576, 0, 196630, 1048576, 0, 196631, 1048576, 0, 196632, 1048576, 0, 196633, 1048576, 0, 196634, 1048576, 0, 196635, 1048576, 0, 196638, 1048576, 0, 196639, 1048576, 0, 196640, 1048576, 0, 196641, 1048576, 0, 196637, 1048576, 0, 196636, 1048576, 0, 851974, 1245184, 0, 851973, 1048576, 0, 851972, 1048576, 0, 1048609, 1179648, 0, 983073, 1179648, 0, 917537, 1179648, 0, 852001, 1179648, 0, 786465, 1179648, 0, 327713, 1179648, 0, 262177, 1179648, 0, 720929, 1179648, 0, 655393, 1179648, 0, 589857, 1179648, 0, 524321, 1179648, 0, 458785, 1179648, 0, 393249, 1179648, 0, 262148, 1179648, 0, 327684, 1179648, 0, 393220, 1179648, 0, 458756, 1179648, 0, 524292, 1179648, 0, 589828, 1179648, 0, 393225, 1179648, 0, 327689, 1179648, 0, 262153, 1179648, 0, 262152, 1179648, 0, 262151, 1179648, 0, 262150, 1179648, 0, 262149, 1179648, 0, 327685, 1179648, 0, 393221, 1179648, 0, 458757, 1179648, 0, 524293, 1179648, 0, 589829, 1179648, 0, 589830, 1179648, 0, 524294, 1179648, 0, 458758, 1179648, 0, 393222, 1179648, 0, 327686, 1179648, 0, 327687, 1179648, 0, 393223, 1179648, 0, 458759, 1179648, 0, 524295, 1179648, 0, 589831, 1179648, 0, 589832, 1179648, 0, 524296, 1179648, 0, 458760, 1179648, 0, 393224, 1179648, 0, 327688, 1179648, 0, 458761, 1179648, 0, 524297, 1179648, 0, 589833, 1179648, 0, 589834, 1179648, 0, 524298, 1179648, 0, 458762, 1179648, 0, 393226, 1179648, 0, 327690, 1179648, 0, 262154, 1179648, 0, 262155, 1179648, 0, 327691, 1179648, 0, 393227, 1179648, 0, 458763, 1179648, 0, 524299, 1179648, 0, 589835, 1179648, 0, 589836, 1179648, 0, 524300, 1179648, 0, 458764, 1179648, 0, 393228, 1179648, 0, 327692, 1179648, 0, 262156, 1179648, 0, 262157, 1179648, 0, 327693, 1179648, 0, 393229, 1179648, 0, 458765, 1179648, 0, 524301, 1179648, 0, 589837, 1179648, 0, 589838, 1179648, 0, 524302, 1179648, 0, 458766, 1179648, 0, 393230, 1179648, 0, 327694, 1179648, 0, 262158, 1179648, 0, 262159, 1179648, 0, 327695, 1179648, 0, 393231, 1179648, 0, 458767, 1179648, 0, 524303, 1179648, 0, 589839, 1179648, 0, 589840, 1179648, 0, 524304, 1179648, 0, 458768, 1179648, 0, 393232, 1179648, 0, 327696, 1179648, 0, 262160, 1179648, 0, 262161, 1179648, 0, 327697, 1179648, 0, 393233, 1179648, 0, 458769, 1179648, 0, 524305, 1179648, 0, 589841, 1179648, 0, 655377, 1179648, 0, 655378, 1179648, 0, 589842, 1179648, 0, 524306, 1179648, 0, 458770, 1179648, 0, 393234, 1179648, 0, 327698, 1179648, 0, 262162, 1179648, 0, 262163, 1179648, 0, 327699, 1179648, 0, 393235, 1179648, 0, 458771, 1179648, 0, 524307, 1179648, 0, 589843, 1179648, 0, 655379, 1179648, 0, 720915, 1179648, 0, 720914, 1179648, 0, 786451, 1179648, 0, 786452, 1179648, 0, 720916, 1179648, 0, 655380, 1179648, 0, 589844, 1179648, 0, 524308, 1179648, 0, 458772, 1179648, 0, 393236, 1179648, 0, 327700, 1179648, 0, 262164, 1179648, 0, 262165, 1179648, 0, 327701, 1179648, 0, 393237, 1179648, 0, 458773, 1179648, 0, 524309, 1179648, 0, 589845, 1179648, 0, 655381, 1179648, 0, 720917, 1179648, 0, 786453, 1179648, 0, 851989, 1179648, 0, 851988, 1179648, 0, 917525, 1179648, 0, 917526, 1179648, 0, 851990, 1179648, 0, 786454, 1179648, 0, 720918, 1179648, 0, 655382, 1179648, 0, 589846, 1179648, 0, 524310, 1179648, 0, 458774, 1179648, 0, 393238, 1179648, 0, 327702, 1179648, 0, 262166, 1179648, 0, 262167, 1179648, 0, 327703, 1179648, 0, 393239, 1179648, 0, 458775, 1179648, 0, 524311, 1179648, 0, 589847, 1179648, 0, 655383, 1179648, 0, 720919, 1179648, 0, 786455, 1179648, 0, 851991, 1179648, 0, 917527, 1179648, 0, 983063, 1179648, 0, 983062, 1179648, 0, 1048599, 1179648, 0, 1048600, 1179648, 0, 983064, 1179648, 0, 917528, 1179648, 0, 851992, 1179648, 0, 786456, 1179648, 0, 720920, 1179648, 0, 655384, 1179648, 0, 589848, 1179648, 0, 524312, 1179648, 0, 458776, 1179648, 0, 393240, 1179648, 0, 327704, 1179648, 0, 262168, 1179648, 0, 262169, 1179648, 0, 327705, 1179648, 0, 393241, 1179648, 0, 458777, 1179648, 0, 524313, 1179648, 0, 589849, 1179648, 0, 655385, 1179648, 0, 720921, 1179648, 0, 786457, 1179648, 0, 851993, 1179648, 0, 917529, 1179648, 0, 983065, 1179648, 0, 1048601, 1179648, 0, 1048602, 1179648, 0, 983066, 1179648, 0, 917530, 1179648, 0, 851994, 1179648, 0, 786458, 1179648, 0, 720922, 1179648, 0, 655386, 1179648, 0, 589850, 1179648, 0, 524314, 1179648, 0, 458778, 1179648, 0, 393242, 1179648, 0, 327706, 1179648, 0, 262170, 1179648, 0, 262171, 1179648, 0, 327707, 1179648, 0, 393243, 1179648, 0, 458779, 1179648, 0, 524315, 1179648, 0, 589851, 1179648, 0, 655387, 1179648, 0, 720923, 1179648, 0, 786459, 1179648, 0, 851995, 1179648, 0, 917531, 1179648, 0, 983067, 1179648, 0, 1048603, 1179648, 0, 1048604, 1179648, 0, 983068, 1179648, 0, 917532, 1179648, 0, 851996, 1179648, 0, 786460, 1179648, 0, 720924, 1179648, 0, 655388, 1179648, 0, 589852, 1179648, 0, 524316, 1179648, 0, 458780, 1179648, 0, 393244, 1179648, 0, 327708, 1179648, 0, 262172, 1179648, 0, 262173, 1179648, 0, 327709, 1179648, 0, 393245, 1179648, 0, 458781, 1179648, 0, 524317, 1179648, 0, 589853, 1179648, 0, 655389, 1179648, 0, 720925, 1179648, 0, 786461, 1179648, 0, 851997, 1179648, 0, 917533, 1179648, 0, 983069, 1179648, 0, 1048605, 1179648, 0, 1048606, 1179648, 0, 983070, 1179648, 0, 917534, 1179648, 0, 851998, 1179648, 0, 786462, 1179648, 0, 720926, 1179648, 0, 655390, 1179648, 0, 589854, 1179648, 0, 524318, 1179648, 0, 458782, 1179648, 0, 393246, 1179648, 0, 327710, 1179648, 0, 262174, 1179648, 0, 262175, 1179648, 0, 327711, 1179648, 0, 393247, 1179648, 0, 458783, 1179648, 0, 524319, 1179648, 0, 589855, 1179648, 0, 655391, 1179648, 0, 720927, 1179648, 0, 786463, 1179648, 0, 851999, 1179648, 0, 917535, 1179648, 0, 983071, 1179648, 0, 1048607, 1179648, 0, 1048608, 1179648, 0, 983072, 1179648, 0, 917536, 1179648, 0, 852000, 1179648, 0, 786464, 1179648, 0, 720928, 1179648, 0, 655392, 1179648, 0, 589856, 1179648, 0, 524320, 1179648, 0, 458784, 1179648, 0, 393248, 1179648, 0, 327712, 1179648, 0, 262176, 1179648, 0, 524290, 1114112, 0, 458754, 1114112, 0, 393218, 1114112, 0, 327682, 1114112, 0, 262146, 1114112, 0, 196610, 1114112, 0, 131074, 1114112, 0, 131073, 1114112, 0, 65537, 1114112, 0, 196609, 1114112, 0, 262145, 1114112, 0, 327681, 1114112, 0, 393217, 1114112, 0, 458753, 1114112, 0, 524289, 1114112, 0, 589825, 1114112, 0, 655361, 1114112, 0, 720897, 1114112, 0, 786433, 1114112, 0, 720898, 1114112, 0, 655362, 1114112, 0, 589826, 1114112, 0, 589827, 1114112, 0, 524291, 1114112, 0, 458755, 1114112, 0, 393219, 1114112, 0, 327683, 1114112, 0, 262147, 1114112, 0, 196611, 1114112, 0, 655363, 1114112, 0, 655395, 1114112, 0, 589859, 1114112, 0, 524323, 1114112, 0, 458787, 1114112, 0, 393251, 1114112, 0, 327715, 1114112, 0, 262179, 1114112, 0, 196643, 1114112, 0, 131107, 1114112, 0, 131108, 1114112, 0, 65572, 1114112, 0, 196644, 1114112, 0, 262180, 1114112, 0, 327716, 1114112, 0, 393252, 1114112, 0, 458788, 1114112, 0, 524324, 1114112, 0, 589860, 1114112, 0, 655396, 1114112, 0, 720932, 1114112, 0, 720931, 1114112, 0, 720930, 1114112, 0, 655394, 1114112, 0, 589858, 1114112, 0, 524322, 1114112, 0, 458786, 1114112, 0, 393250, 1114112, 0, 327714, 1114112, 0, 262178, 1114112, 0, 196642, 1114112, 0, 786466, 1114112, 0, 852002, 1114112, 0, 917538, 1114112, 0, 983074, 1114112, 0, 1048610, 1114112, 0, 1114146, 1114112, 0, 1114147, 1114112, 0, 1048611, 1114112, 0, 983075, 1114112, 0, 917539, 1114112, 0, 852003, 1114112, 0, 786467, 1114112, 0, 786468, 1114112, 0, 852004, 1114112, 0, 917540, 1114112, 0, 983076, 1114112, 0, 1048612, 1114112, 0, 1114148, 1114112, 0, 1179684, 1114112, 0, 1179683, 1114112, 0, 1245220, 1114112, 0)
layer_1/name = "background detail"
layer_1/tile_data = PackedInt32Array(1114146, 196608, 0, 1179683, 196608, 0, 1245220, 196608, 0, 786433, 983040, 0, 720898, 983040, 0, 655363, 983040, 0, 65537, 262144, 0, 131074, 262144, 0, 196611, 262144, 0, 196642, 524288, 0, 131107, 524288, 0, 65572, 524288, 0, 851982, 589824, 0, 786447, 589824, 0, 720912, 589824, 0, 917519, 589824, 0, 851984, 589824, 0, 786449, 589824, 0, 851983, 851968, 0, 786448, 851968, 0, 720913, 851968, 0, 655376, 851968, 0, 720911, 851968, 0, 786446, 851968, 0, 917520, 851968, 0, 983056, 589824, 0, 851985, 851968, 0, 917521, 589824, 0, 983057, 851968, 0, 1048593, 589824, 0, 786450, 851968, 0, 851986, 589824, 0, 917522, 851968, 0, 983058, 589824, 0, 851987, 851968, 0, 917523, 589824, 0, 1048594, 851968, 0, 1114130, 589824, 0, 983059, 851968, 0, 1048595, 589824, 0, 1114131, 851968, 0, 1179667, 589824, 0, 917524, 851968, 0, 983060, 589824, 0, 1048596, 851968, 0, 1114132, 589824, 0, 983061, 851968, 0, 1048597, 589824, 0, 1179668, 851968, 0, 1245204, 589824, 0, 1114133, 851968, 0, 1179669, 589824, 0, 1048598, 851968, 0, 1114134, 589824, 0)
layer_2/name = "line detail"

[node name="Player" parent="." instance=ExtResource("2_p6e2w")]
position = Vector2(243, 144)

[node name="to_first_floor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="to_first_floor"]
position = Vector2(60, 109.5)
shape = SubResource("RectangleShape2D_omm81")

[node name="to_second_floor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="to_second_floor"]
position = Vector2(244, 166)
shape = SubResource("RectangleShape2D_exbm7")

[node name="Starea" type="Area2D" parent="."]
position = Vector2(144, 112)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Starea"]
position = Vector2(4, 8)
rotation = 0.785398
shape = SubResource("RectangleShape2D_ab7vd")

[node name="CanvasLayer" type="CanvasLayer" parent="." groups=["CanvasLayer"]]
scale = Vector2(5, 5)
transform = Transform2D(5, 0, 0, 5, 0, 0)

[connection signal="body_entered" from="to_first_floor" to="." method="_on_to_first_floor_body_entered"]
[connection signal="body_entered" from="to_first_floor" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="to_second_floor" to="." method="_on_to_second_floor_body_entered"]
[connection signal="body_entered" from="Starea" to="." method="_on_starea_body_entered"]
[connection signal="body_exited" from="Starea" to="." method="_on_starea_body_exited"]
